# pointcloud_mapping

./: CMakeLists.txt  README.md  package.xml
config/: map_builder_config.yaml
launch/: pointcloud_map_builder.launch
rviz/: map_builder.rviz
scripts/: dynamic_object_removal.py  dynamic_point_remover.py  map_utils.py  pointcloud_map_builder.py
