<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_mapping</name>
  <version>1.0.0</version>
  <description>
    Dynamic point cloud filtering and mapping package for ROS.
    This package provides tools for filtering dynamic objects from point clouds 
    and building accumulated static maps.
  </description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <author email="your_email@domain.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS dependencies -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pickle</exec_depend>

  <export>
  </export>
</package>